@@ -1,6 +1,10 @@
 2008-07-16  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>
 
  * Wrote script for quick running of all available tests.
+ * Defined API for bank files. (Class regbank.BankFile.BankFile)
+ * Defined API for editing registrations (Class regbank.Registration.Registration)
+ * Defined API for registration files (Class regfile.RegFile)
+ * Introduced constants for keyboard models (regbank.models)
 
 
 2008-07-12  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>
